# asterisk-rs

./: CONVERSATION_LOG.md  Cargo.toml  README.md  ioqueue-fix-plan.md  verify_builder.sh
crates/asterisk-ami/: Cargo.toml
crates/asterisk-ami/src/: actions.rs  auth.rs  event_bus.rs  events.rs  lib.rs  protocol.rs  server.rs  session.rs
crates/asterisk-apps/: Cargo.toml
crates/asterisk-apps/src/: adapter.rs  adsiprog.rs  agent_pool.rs  agi_app.rs  alarmreceiver.rs  amd.rs  answer.rs  attended_transfer.rs  authenticate.rs  bridgewait.rs  cdr_app.rs  celgenuserevent.rs  chanisavail.rs  channelredirect.rs  chanspy.rs  confbridge.rs  controlplayback.rs  dahdiras.rs  db.rs  dial.rs  dictate.rs  directory.rs  disa.rs  dumpchan.rs  echo.rs  exec.rs  external_ivr.rs  festival.rs  followme.rs  forkcdr.rs  goto.rs  hangup.rs  ices.rs  if_.rs  image.rs  ivrdemo.rs  jack.rs  lib.rs  macro_.rs  milliwatt.rs  (+41 more)
crates/asterisk-ari/: Cargo.toml
crates/asterisk-ari/src/: applications.rs  asterisk_resource.rs  bridges.rs  channels.rs  device_states.rs  endpoints.rs  error.rs  http_listener.rs  lib.rs  mailboxes.rs  models.rs  playbacks.rs  recordings.rs  routes.rs  server.rs  sounds.rs  websocket.rs
crates/asterisk-channels/: Cargo.toml
crates/asterisk-channels/src/: audiosocket.rs  bridge_media.rs  console.rs  dahdi.rs  iax2.rs  lib.rs  local.rs  mgcp.rs  motif.rs  phone.rs  pjsip_channel.rs  rtp_channel.rs  skinny.rs  unistim.rs  websocket.rs
crates/asterisk-codecs/: Cargo.toml
crates/asterisk-codecs/src/: adpcm.rs  agc.rs  alaw_table.rs  builtin_codecs.rs  builtin_translators.rs  codec.rs  codec2.rs  dtmf_detect.rs  echo_cancel.rs  format.rs  format_cap.rs  g722.rs  g726.rs  gsm_ffi.rs  ilbc.rs  lib.rs  lpc10.rs  noise_suppress.rs  opus.rs  opus_ffi.rs  plc.rs  registry.rs  resample.rs  speex.rs  speex_ffi.rs  tone_gen.rs  translate.rs  ulaw_table.rs
crates/asterisk-core/: Cargo.toml
crates/asterisk-core/src/: lib.rs  telemetry.rs
crates/asterisk-core/src/bridge/: basic.rs  bridge_channel.rs  builtin_features.rs  event_loop.rs  implementations.rs  mod.rs  native_rtp.rs  softmix.rs
crates/asterisk-core/src/channel/: audiohook.rs  dtmf.rs  framehook.rs  generator.rs  mod.rs  readwrite.rs  softhangup.rs  store.rs  tech_registry.rs
crates/asterisk-core/src/frame/: mod.rs
crates/asterisk-core/src/module/: mod.rs
crates/asterisk-core/src/pbx/: app_registry.rs  exec.rs  expression.rs  func_registry.rs  hints.rs  mod.rs  pbx_config.rs  pbx_realtime.rs  pbx_spool.rs  substitute.rs
crates/asterisk-core/src/scheduler/: mod.rs
crates/asterisk-core/src/stasis/: mod.rs
crates/asterisk-core/src/taskprocessor/: mod.rs
crates/asterisk-integration-tests/: Cargo.toml
crates/asterisk-integration-tests/src/: lib.rs
crates/asterisk-res/: Cargo.toml
crates/asterisk-res/src/: adsi.rs  ael.rs  agi.rs  astdb.rs  audiosocket.rs  calendar.rs  cel.rs  cel_beanstalkd.rs  cel_odbc.rs  cel_pgsql.rs  cel_radius.rs  cel_sqlite3.rs  cel_tds.rs  clialiases.rs  clioriginate.rs  config_curl.rs  config_ldap.rs  config_odbc.rs  config_options.rs  config_pgsql.rs  config_sqlite3.rs  convert.rs  dialog_info.rs  dns_srv.rs  eagi.rs  endpoint_id.rs  fax.rs  features.rs  format_attr.rs  geolocation_res.rs  http_server.rs  lib.rs  limit.rs  lua.rs  media_cache.rs  musiconhold.rs  mwi_external.rs  nat.rs  parking.rs  path.rs  (+25 more)
crates/asterisk-sip/: BUILDER_API.md  Cargo.toml
crates/asterisk-sip/src/: RATE_LIMIT_README.md  acl.rs  authenticator.rs  builder.rs  caller_id.rs  channel_driver.rs  config_wizard.rs  connected_line.rs  crypto.rs  diversion.rs  dtls.rs  dtmf_info.rs  empty_info.rs  event_handler.rs  examples.rs  exten_state.rs  geolocation.rs  gruu.rs  history_info.rs  ice.rs  keepalive.rs  lib.rs  logger.rs  messaging.rs  multipart.rs  mwi.rs  notify.rs  notify_service.rs  one_touch_record.rs  outbound.rs  outbound_registration.rs  phoneprov_pjsip.rs  pjsip_config.rs  prack.rs  pubsub.rs  rate_limit.rs  rate_limit_integration.rs  refer.rs  registrar.rs  rfc3326.rs  (+11 more)
crates/asterisk-sip/src/auth/: mod.rs
crates/asterisk-sip/src/dialog/: mod.rs
crates/asterisk-sip/src/parser/: mod.rs
crates/asterisk-sip/src/rtp/: avpf.rs  bundle.rs  engine.rs  ice_transport.rs  jitter_buffer.rs  mod.rs  mos.rs
crates/asterisk-sip/src/sdp/: mod.rs
crates/asterisk-sip/src/session/: mod.rs
crates/asterisk-sip/src/transaction/: mod.rs
crates/asterisk-sip/src/transport/: mod.rs  tls.rs  websocket.rs
crates/asterisk-test-framework/: Cargo.toml
crates/asterisk-test-framework/src/: lib.rs  mock_channel.rs
crates/asterisk-test-framework/src/tests/: mod.rs  test_abstract_jb.rs  test_acl.rs  test_aeap.rs  test_aeap_speech.rs  test_aeap_transaction.rs  test_aeap_transport.rs  test_amihooks.rs  test_aoc.rs  test_app.rs  test_ari.rs  test_ari_model.rs  test_astobj2.rs  test_astobj2_thrash.rs  test_astobj2_weaken.rs  test_bridging.rs  test_bucket.rs  test_callerid.rs  test_capture.rs  test_cdr.rs  test_cel.rs  test_channel.rs  test_channel_feature_hooks.rs  test_config.rs  test_conversions.rs  test_core_codec.rs  test_core_format.rs  test_crypto.rs  test_data_buffer.rs  test_db.rs  test_devicestate.rs  test_dlinklists.rs  test_dns.rs  test_dns_naptr.rs  test_dns_query_set.rs  (+63 more)
crates/asterisk-utils/: Cargo.toml
crates/asterisk-utils/src/: ast_coredumper.rs  astcanary.rs  astdb2sqlite3.rs  check_expr.rs  check_expr2.rs  conf_bridge_binaural.rs  muted.rs  smsq.rs  streamplayer.rs
crates/pjsip-shim/: Cargo.toml  build.rs
crates/pjsip-shim/include/: pjsip_rs.h
crates/pjsip-shim/src/: atomic.rs  init.rs  ioqueue.rs  lib.rs  list.rs  log_wrapper.c  logging.rs  misc.rs  pjlib_stubs.c  pool.rs  sip_message.rs  sip_parser.rs  sockaddr.rs  socket.rs  socket_consts.rs  string.rs  test_framework.rs  threading.rs  time.rs  timer.rs  types.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_sdp_parse/: sdp_offer.txt  sdp_simple.txt
fuzz/corpus/fuzz_sip_parse/: sip_200_ok.txt  sip_invite.txt  sip_register.txt
fuzz/fuzz_targets/: fuzz_rtp_parse.rs  fuzz_sdp_parse.rs  fuzz_sip_parse.rs  fuzz_stun_parse.rs
(+114 files in other folders)
