[package]
name = "asterisk-apps"
version.workspace = true
edition.workspace = true

[dependencies]
asterisk-types = { workspace = true }
asterisk-core = { workspace = true }
asterisk-ami = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
md-5 = { workspace = true }
hex = { workspace = true }
