[package]
name = "asterisk-ari"
version.workspace = true
edition.workspace = true

[dependencies]
asterisk-types = { workspace = true }
asterisk-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
serde_json = "1"
base64 = { workspace = true }
