[package]
name = "asterisk-core"
version.workspace = true
edition.workspace = true

[dependencies]
asterisk-types = { workspace = true }
asterisk-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
inventory = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
