[package]
name = "asterisk-res"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
asterisk-types = { workspace = true }
asterisk-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
