[package]
name = "asterisk-sip"
version.workspace = true
edition.workspace = true

[features]
default = ["pure-rust-crypto"]
pure-rust-crypto = []
openssl-crypto = []

[dependencies]
asterisk-types = { workspace = true }
asterisk-config = { workspace = true }
asterisk-core = { workspace = true }
asterisk-channels = { workspace = true }
asterisk-codecs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
md-5 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
crc32fast = "1"
hmac = { workspace = true }
aes = { workspace = true }
aes-gcm = "0.10"
